--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/genai": "^1.7.0",
     "@google/generative-ai": "^0.24.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
     "@tinymce/tinymce-react": "^6.2.1",
     "appwrite": "^18.1.1",
