--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
     "@tinymce/tinymce-react": "^6.2.1",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "appwrite": "^18.1.1",
     "axios": "^1.10.0",
